--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-```{r,echo = F,message=FALSE,warning=FALSE}
+```{r message=FALSE,warning=FALSE}
 
 library(magrittr)
 library(ggplot2)
@@ -26,16 +26,13 @@ df<- readr::read_rds('data/df_covid19.rds')
 ```
 
 
-```{r , echo = F, warning = F, message = F, fig.align = "center", fig.width = 11, fig.height = 7}
+```{r echo = F, warning = F, message = F, fig.align = "center", fig.width = 11, fig.height = 7}
 df %>% 
   dplyr::group_by(estado) %>% 
   dplyr::mutate(total_casos = max(casos_acumulado)) %>% 
   dplyr::select(estado,total_casos) %>% 
-  dplyr::distinct() %>% 
-  ggplot()+
-  geom_bar(aes(x = estado,y=total_casos), stat = "identity",
-           color = "black", fill = "blue")+
-  theme_dark()
+  dplyr::distinct() 
+ 
 
 ```
 
