--- a/README.Rmd
+++ b/README.Rmd
@@ -27,11 +27,11 @@ df<- readr::read_rds('data/df_covid19.rds')
 
 
 ```{r echo = F, warning = F, message = F, fig.align = "center", fig.width = 11, fig.height = 7}
-df %>% 
-  dplyr::group_by(estado) %>% 
-  dplyr::mutate(total_casos = max(casos_acumulado)) %>% 
-  dplyr::select(estado,total_casos) %>% 
-  dplyr::distinct() 
+# df %>% 
+#   dplyr::group_by(estado) %>% 
+#   dplyr::mutate(total_casos = max(casos_acumulado)) %>% 
+#   dplyr::select(estado,total_casos) %>% 
+#   dplyr::distinct() 
 
 ```
 
